View File macro - Make the macro display async #646
* refactored ViewFileMacroPrepareBlocks
* created MacroAsyncManager to handle the async rendering of the display blocks
* created AbstractViewFileAsyncRenderer to add common initialization method
* created ViewFileAsyncThumbnailRenderer to handle async thumbnail render execution
* created ViewFileAsyncFullRenderer to handle full view render execution
* added comments